Disambiguate colliding date representation. Fixes #1746